# gpgi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  _typos.toml  meson.build  meson.options  pyproject.toml  setup.cfg  setup.py
.github/: renovate.json5
.github/workflows/: cd.yml  ci.yml  type-checking.yaml
constraints/: minimal_dependencies.txt
gpgi/: __init__.py  _backports.py  _boundaries.py  _typing.py  api.py  types.py
gpgi/clib/: _deposition_methods.pyx  _indexing.pyx
gpgi/lib/: _deposition_methods.py  _indexing.py
requirements/: minimal_dependencies.txt  tests.txt  typecheck.txt
src/gpgi/: __init__.py  _backports.py  _boundaries.py  _data_types.py  _lib.py  _lib.pyi  _lib.pyx  _load.py  _spatial_data.py  _typing.py  types.py  typing.py
src/gpgi/clib/: _deposition_methods.pyx
src/gpgi/lib/: __init__.py  _deposition_methods.py
tests/: conftest.py  test_api.py  test_boundary_registry.py  test_concurrent.py  test_deposit.py  test_grid.py  test_sort.py  test_types.py
